# ik-llama-cpp-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
ik_llama_cpp/: __init__.py  _ctypes_api.py  _internals.py  _lib_loader.py  llama.py  quantize.py
tests/: test_basic.py  test_unit.py
