[build-system]
requires = ["scikit-build-core>=0.8"]
build-backend = "scikit_build_core.build"

[project]
name = "ik-llama-cpp-python"
version = "0.1.3"
description = "Python bindings for ik_llama.cpp — high-performance llama.cpp fork"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
quantize = ["huggingface_hub>=0.20"]

[project.scripts]
ik-llama-quantize = "ik_llama_cpp.quantize:main"

[project.urls]
Homepage = "https://github.com/gongpx20069/ik-llama-cpp-python"
Repository = "https://github.com/gongpx20069/ik-llama-cpp-python"

[tool.scikit-build]
wheel.packages = ["ik_llama_cpp"]
cmake.build-type = "Release"
cmake.args = ["-DBUILD_SHARED_LIBS=ON"]

[tool.scikit-build.cmake.define]
LLAMA_BUILD_TESTS = "OFF"
LLAMA_BUILD_EXAMPLES = "OFF"
LLAMA_BUILD_SERVER = "OFF"
